--- a/GS.html
+++ b/GS.html
@@ -6,12 +6,12 @@
     <title>Power BI Dashboard</title>
 
     <!-- Google Analytics Code -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXX-X"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SF938VBEBZ"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-SF938VBEBZ'); // Replace with your Google Analytics Tracking ID
+        gtag('config', 'G-SF938VBEBZ'); 
     </script>
     <!-- End Google Analytics Code -->
 
