--- a/GS_J.html
+++ b/GS_J.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Superstore Dashboard</title>
-  
-    <!-- Google tag (gtag.js) -->
+
+    <!-- Google tag (gtag.js) for tracking -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VN38C4QQMG"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -13,13 +13,27 @@
       gtag('js', new Date());
       gtag('config', 'G-VN38C4QQMG');
     </script>
-    <!-- End Google Analytics -->
 
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+        iframe {
+            display: block;
+            width: 100%;
+            height: 100vh;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <!-- Embed your Power BI Dashboard -->
-    <iframe title="Global Superstore Dashboard" width="100%" height="800px" 
-    src="https://app.powerbi.com/view?r=eyJrIjoiM2FmOTY2Y2ItY2I3Ny00MWU3LTk4ZTctMjNjOWJjMzJlYjdiIiwidCI6IjIxNWUyNDZjLTliYjItNDQ0Zi04YzYxLWY5ZDMzM2E5YTNiYiJ9" 
-    frameborder="0" allowFullScreen="true"></iframe>
+
+    <!-- Embed Power BI Dashboard -->
+    <iframe title="Global Superstore Dashboard" 
+        src="https://app.powerbi.com/view?r=eyJrIjoiM2FmOTY2Y2ItY2I3Ny00MWU3LTk4ZTctMjNjOWJjMzJlYjdiIiwidCI6IjIxNWUyNDZjLTliYjItNDQ0Zi04YzYxLWY5ZDMzM2E5YTNiYiJ9" 
+        allowfullscreen="true"></iframe>
+
 </body>
 </html>
