--- a/GS_J.html
+++ b/GS_J.html
@@ -3,17 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Global Superstore Dashboard</title>
-
-    <!-- Google tag (gtag.js) for tracking -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VN38C4QQMG"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-VN38C4QQMG');
-    </script>
-
     <style>
         body {
             margin: 0;
@@ -23,10 +12,19 @@
         iframe {
             display: block;
             width: 100%;
-            height: 100vh;
-            border: none;
+            height: 100vh; /* Full height of the viewport */
+            border: none; /* No border */
         }
     </style>
+
+    <!-- Google tag (gtag.js) for tracking -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VN38C4QQMG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-VN38C4QQMG');
+    </script>
 </head>
 <body>
 
@@ -37,3 +35,4 @@
 
 </body>
 </html>
+
